--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;400&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ESI</title>
+    <title>ESI - Entech Software Innovations</title>
 </head>
+
+<style>
+    body::-webkit-scrollbar { width: 4px; background-color: #202124;}
+    body::-webkit-scrollbar-thumb {background: #fff;}
+</style>
 
 <body>
     <div id="app"></div>
